[gd_scene load_steps=2 format=3 uid="uid://round_end_ui"]

[ext_resource type="Script" path="res://scripts/round_end_ui.gd" id="1_rend"]

[node name="RoundEndUI" type="CanvasLayer"]
script = ExtResource("1_rend")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -180.0
offset_right = 220.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Round Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="ScoresContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="PlayAgainButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
theme_override_font_sizes/font_size = 18
text = "Play Again"
